--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@ img {
 
 body {
   color: black;
+  background-color: #e4dccf;
 }
 
 /* default styles end */
@@ -28,8 +29,9 @@ header {
   top: 0;
   left: 0;
   width: 100%;
-  background: rgb(233, 231, 231);
+  background: #fff4e0;
   box-shadow: 0 1px 4px hsl(0 4% 15% / 10%);
+  z-index: 100;
 }
 
 .nav {
@@ -63,6 +65,7 @@ section {
 
 section h2 {
   text-decoration: underline;
+  margin: 2rem 0;
 }
 
 .section-title {
@@ -90,4 +93,87 @@ section h2 {
   padding: 10px;
   border: 1px solid #222;
   transition: 0.4s;
+}
+
+.product-img {
+  width: 100%;
+  height: auto;
+  margin-bottom: 0.5rem;
+}
+
+.product-title {
+  font-size: 1.1rem;
+  font-weight: 600;
+  text-transform: uppercase;
+  margin-bottom: 0.5rem;
+}
+
+.price {
+  font-weight: 500;
+}
+
+.add-cart {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  background-color: transparent;
+  padding: 10px;
+  color: #222;
+  cursor: pointer;
+}
+
+/* cart */
+.cart {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 360px;
+  min-height: 100vh;
+  padding: 20px;
+  background: #f3f0ea;
+  box-shadow: 0 1px 4px hsl(0 4% 15% / 10%);
+}
+
+.cart-title {
+  text-align: center;
+  font-weight: 600;
+  font-size: 1.5rem;
+  margin-top: 2rem;
+}
+
+.cart-box {
+  display: grid;
+  grid-template-columns: 32% 50% 18%;
+  align-items: center;
+  gap: 1rem;
+  margin-top: 1rem;
+}
+
+.cart-img {
+  width: 100px;
+  height: 100px;
+  object-fit: contain;
+  padding: 10px;
+}
+
+.detail-box {
+  display: grid;
+  row-gap: 0.5rem;
+}
+
+.cart-product-title {
+  font-size: 1rem;
+  text-transform: uppercase;
+}
+
+.cart-price {
+  font-weight: 500;
+}
+
+.cart-quantity {
+  border: 1px solid #fff4e0;
+  outline-color: black;
+  width: 2.4rem;
+  text-align: center;
+  font-size: 1rem;
 }
