--- a/styles.css
+++ b/styles.css
@@ -229,3 +229,47 @@ section h2 {
   color: black;
   cursor: pointer;
 }
+
+/* Making Responsive */
+@media (max-width: 1080px) {
+  .nav {
+    padding: 15px;
+  }
+
+  section {
+    padding: 3rem 0 2rem;
+  }
+
+  .container {
+    width: 90%;
+    margin: 0 auto;
+  }
+
+  .shop {
+    margin-top: 2rem !important;
+  }
+}
+
+@media (max-width: 400px) {
+  .nav {
+    padding: 11px;
+  }
+
+  .logo {
+    font-size: 1rem;
+  }
+
+  .cart {
+    width: 320px;
+  }
+}
+
+@media (max-width: 360px) {
+  .shop {
+    margin-top: 1rem !important;
+  }
+
+  .cart {
+    width: 280px;
+  }
+}
